--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ Yinlei/Assets/model
 Yinlei/Assets/Scenes/New Terrain.asset
 Yinlei/Assets/Scenes/New Terrain.asset.meta
 Yinlei/Assets/XQ/Arts/Fonts
+Yinlei/Temp
